Some minor css fixes

--- a/index.html
+++ b/index.html
@@ -3702,8 +3702,8 @@ input[type=range] {
         <h2 id="bt-question">Press "Start" to Begin!</h2>
         <input type="text" id="bt-answer" placeholder="Type your answer..." class="bt-input" />
         <div class="bt-buttons">
-          <button class="primary-btn" onclick="submitBTAnswer()">Submit</button>
-          <button class="secondary-btn" onclick="skipBTQuestion()">Skip</button>
+          <button class="start-game-btn" onclick="submitBTAnswer()">Submit</button>
+          <button class="start-game-btn" onclick="skipBTQuestion()">Skip</button>
         </div>
         <div class="bt-stats">
           Difficulty: <span id="bt-difficulty">Easy</span> | Achievements: <span id="bt-achievements">0</span>
@@ -8557,5 +8557,6 @@ function openGame(gameType){
     </script>
 </body>
 </html>
+
 
 
